# SxChipset_Type103

./: .gitignore  AddressStateMachine.ice  LICENSE  README.md  platformio.ini
AddressStateMachine2/: platformio.ini
Chipset/: CMakeLists.txt  FLOPSRunningTime_32kMode.txt  FLOPSRunningTime_ADS_FinalWaitStateElimination.txt  FLOPSRunningTime_NoToggle_ADS.txt  FLOPSRunningTime_PortH.txt  FLOPSRunningTime_PortH_IsD0_7.txt  FLOPSRunningTime_i960HandlesAllAddressLines.txt  FLOPSRunningTimes_Base.txt  README.md  platformio.ini
ClockChip/: platformio.ini
Coprocessor/: README.md  platformio.ini
Coprocessor2/: README.md  platformio.ini
ExternalTest/: platformio.ini
FakeEBITest/: platformio.ini
Firmware/: platformio.ini
GPU/: platformio.ini
IBUSTest/: platformio.ini
IsolationTester/: README.md  platformio.ini
MemoryController/: README.md  platformio.ini
PCController/: CMakeLists.txt  main.cc
PLD/: 1MEGDecoderCard.chp  1MEGDecoderCard.fus  1MEGDecoderCard.jed  1MEGDecoderCard.pin  1MEGDecoderCard.pld  AddressDecoder.chp  AddressDecoder.fus  AddressDecoder.jed  AddressDecoder.pin  AddressDecoder.pld  BusDecoder.chp  BusDecoder.fus  BusDecoder.jed  BusDecoder.pin  BusDecoder.pld  BusDecoder32Bit.chp  BusDecoder32Bit.fus  BusDecoder32Bit.jed  BusDecoder32Bit.pin  BusDecoder32Bit.pld  ByteEnableDecoder.pld  CH351DecoderCircuit.chp  CH351DecoderCircuit.fus  CH351DecoderCircuit.jed  CH351DecoderCircuit.pin  CH351DecoderCircuit.pld  (+130 more)
StateDetector/: CMakeLists.txt  as_detector.pio  main.cc  platformio.ini  source_me
StateDetector/src/: as_detector.pio  main.cc
(+125 files in other folders)
